--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,42 @@
 .App {
   text-align: center;
 }
+
+nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 25px 100px;
+  border-bottom: 1px solid lightgrey;
+  background-color: lightblue;
+}
+
+a {
+  margin: 0 15px;
+  text-decoration: none;
+  font-size: 16px;
+  color: white;
+  font-weight: bold
+}
+
+a:hover {
+  font-size: 18px;
+  color: black;
+  font-weight: bold;
+}
+
+button {
+  width: 75px;
+  height: 25px;
+  font-weight: bold;
+  color: white;
+  background-color: lightgrey;
+  border: 1px solid white;;
+  border-radius: 4px;
+}
+
+button:hover {
+  color: black;
+  background-color: white;
+  border: 1px solid black;
+}
